--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
       - uses: denolib/setup-deno@master
         with:
           deno-version: 1.4.1
@@ -16,4 +19,4 @@ jobs:
       - run: |
           export PATH="/home/runner/.deno/bin:$PATH"
           eggs link ${{ secrets.NESTAPIKEY }}
-          eggs publish --version ${{ GITHUB_REF }}
+          eggs publish --version ${{ steps.vars.outputs.tag }}
