--- a/docs/.vscode/settings.json
+++ b/docs/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Devdocs",
         "Discordeno",
         "Discordeno's",
+        "POPCORNAPIKEY",
         "Traversy",
         "algolia"
     ]
